# compacted_video

./: pyproject.toml
src/compacted_video/: compacted_video.py  utils.py
tests/: test_builder.py  test_concat_video.py
