[project]
authors = [{name = "Jad Abou-Chakra", email = "29726242+jc211@users.noreply.github.com"}]
dependencies = [
    "compacted-segments@git+https://github.com/jc211/compacted_segments",
    "torchcodec@https://download.pytorch.org/whl/cu124/TorchCodec-0.1.1%2Bcu124-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"

]
name = "compacted-video"
requires-python = ">=3.11,<3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
compacted_video = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cuda-version = "<=12.4"
ffmpeg = "*"
cuda = "*"

[tool.pixi.system-requirements]
cuda = "12"
